syntax = "proto3";
package ProtoModel;
option java_package = "com.ProtoModel";

message UserModel{
	   int32 user_id = 1;
	   string user_name = 2;
	   string gender = 3;
	   string country = 4;
	   string picfile = 5;
	   int64 created_time = 6;
	   int64 modif_time =7;
	   SessionModel sessionObject=8;
	   PasswordModel passTableObj=9;
	   repeated EmailModel emailTableObj=10;
	   repeated MobileModel mobileTableObjs=11;
	   repeated UserModel chatList=12;
	   repeated GroupInfoModel groupChatList=13;
} 

message SessionModel{
       int32 user_id = 1;
       string session_id = 2;
       int64 Expiry = 3;
}

message PasswordModel{
       int32 user_id = 1;
       string pass_salt = 2 ;
       string pass_hash = 3 ;
       int32 pass_status = 4 ;
       int64 created_time = 5 ;
}

message EmailModel{
       int32 user_id = 1;
       string emailid = 2 ;
       int64 is_primary = 3;
       int64 is_verified = 4;
       int64 created_time = 5;
       int64 modif_time = 6;
}

message MobileModel{
       int32 user_id = 1;
       int32 mobileno = 2;
       int32 is_primary = 3;
       int32 is_verified = 4;
       int64 created_time = 5;
       int64 modif_time = 6;
}

message GroupInfoModel{
       int32 group_id = 1;
       string group_name = 2;
       int32 admin_id = 3;
       int64 created_time = 4;
       int64 modif_time = 5;
}


